--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -6,6 +6,7 @@ env:
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "production" # template field
   CONFIG_DIRECTORY: "./"
+  TF_ENVIRONMENT: ${{ github.base_ref }}
 jobs:
   tflint:
     name: "TFLint"
@@ -19,6 +20,9 @@ jobs:
     - uses: actions/checkout@v4
       name: Checkout source code
 
+    - name: Show ENVIRONMENT
+      run: echo $TF_ENVIRONMENT
+
     - uses: actions/cache@v4
       name: Cache plugin dir
       with:
@@ -29,6 +33,7 @@ jobs:
       name: Setup TFLint
       with:
         tflint_version: v0.52.0
+
     - name: Show version
       run: tflint --version
 
