--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,8 +45,7 @@ jobs:
      - name: Terraform init [pull_request]
        id: init-pr
        if: github.event_name == 'pull_request'
-       run:
-         script: |
+       run: |
            if [ ${{ github.event.pull_request.base.ref }} == "develop" ]; then
             ENV = "dev";
            elif [ ${{ github.event.pull_request.base.ref }} == "main" ]; then
