do not limit branches

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,9 +8,9 @@ on:
    paths:
    - terraform/**
  pull_request:
-   branches:
-   - main
-   - develop
+#   branches:
+#   - main
+#   - develop
    paths:
    - terraform/**
 
