--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,14 +5,14 @@ on:
 #   branches:
 #   - main
 #   - develop
-   paths:
-   - terraform/**
+#   paths:
+#   - terraform/**
  pull_request:
 #   branches:
 #   - main
 #   - develop
-   paths:
-   - terraform/**
+#   paths:
+#   - terraform/**
 
 env:
  # verbosity setting for Terraform logs
