--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,6 +37,14 @@ jobs:
      - name: Checkout the repository to the runner
        uses: actions/checkout@v2
 
+     - id: 'auth'
+       uses: 'google-github-actions/auth@v2'
+       with:
+         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+     - name: 'Set up Cloud SDK'
+       uses: 'google-github-actions/setup-gcloud@v2'
+
      - name: Setup Terraform with specified version on the runner
        uses: hashicorp/setup-terraform@v2
        with:
