--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,6 +28,9 @@ jobs:
  terraform:
    name: "Terraform Infrastructure Change Management"
    runs-on: ubuntu-latest
+   permissions:
+     pull-requests: write  # Required for creating or updating PRs
+     contents: write       # Required for modifying files (if applicable)
    defaults:
      run:
        shell: bash
