--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -118,6 +118,7 @@ jobs:
        continue-on-error: true
 
      - uses: actions/github-script@v6
+       name: Terraform Plan Comment on PR
        if: github.event_name == 'pull_request'
        env:
          PLAN: "terraform\n${{ steps.plan-pr.outputs.stdout }}"
