--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -74,6 +74,28 @@ jobs:
        id: validate
        run: terraform validate
 
+     - uses: actions/cache@v4
+       name: Cache plugin dir
+       with:
+         path: ~/.tflint.d/plugins
+         key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
+
+     - uses: terraform-linters/setup-tflint@v4
+       name: Setup TFLint
+       with:
+         tflint_version: v0.52.0
+     - name: Show version
+       run: tflint --version
+
+     - name: Init TFLint
+       run: tflint --init
+       env:
+         # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
+         GITHUB_TOKEN: ${{ github.token }}
+
+     - name: Run TFLint
+       run: tflint -f compact
+
      - name: Terraform plan [pull_request]
        id: plan-pr
        if: github.event_name == 'pull_request'
