--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -94,7 +94,7 @@ jobs:
          GITHUB_TOKEN: ${{ github.token }}
 
      - name: Run TFLint
-       run: tflint -f compact
+       run: tflint -f compact --recursive
 
      - name: Terraform plan [pull_request]
        id: plan-pr
