--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -94,7 +94,7 @@ jobs:
          GITHUB_TOKEN: ${{ github.token }}
 
      - name: Run TFLint
-       run: tflint -f compact --recursive
+       run: tflint -f compact --recursive --minimum-failure-severity=error
 
      - name: Run Terrascan
        id: terrascan
