--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -102,8 +102,13 @@ jobs:
        with:
          iac_type: 'terraform'
          iac_version: 'v14'
-         policy_type: 'google'
          only_warn: true
+         sarif_upload: true
+
+     - name: Upload SARIF file
+       uses: github/codeql-action/upload-sarif@v1
+       with:
+         sarif_file: terrascan.sarif
 
      - name: Terraform plan [pull_request]
        id: plan-pr
