--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,8 +55,38 @@ jobs:
        with:
          sarif_file: terrascan.sarif
 
+ tflint:
+   runs-on: ubuntu-latest
+   name: "TFlint"
+   steps:
+     - name: Checkout code
+       uses: actions/checkout@v4
+
+     - uses: actions/cache@v4
+       name: Cache plugin dir
+       with:
+         path: ~/.tflint.d/plugins
+         key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
+
+     - uses: terraform-linters/setup-tflint@v4
+       name: Setup TFLint
+       with:
+         tflint_version: v0.52.0
+
+     - name: Show version
+       run: tflint --version
+
+     - name: Init TFLint
+       run: tflint --init
+       env:
+         # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
+         GITHUB_TOKEN: ${{ github.token }}
+
+     - name: Run TFLint
+       run: tflint -f compact --recursive --minimum-failure-severity=error
+
  terraform:
-   name: "Terraform CICD"
+   name: "Terraform"
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write  # Required for creating or updating PRs
@@ -115,28 +145,6 @@ jobs:
      - name: Terraform validate
        id: validate
        run: terraform validate
-
-     - uses: actions/cache@v4
-       name: Cache plugin dir
-       with:
-         path: ~/.tflint.d/plugins
-         key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
-
-     - uses: terraform-linters/setup-tflint@v4
-       name: Setup TFLint
-       with:
-         tflint_version: v0.52.0
-     - name: Show version
-       run: tflint --version
-
-     - name: Init TFLint
-       run: tflint --init
-       env:
-         # https://github.com/terraform-linters/tflint/blob/master/docs/user-guide/plugins.md#avoiding-rate-limiting
-         GITHUB_TOKEN: ${{ github.token }}
-
-     - name: Run TFLint
-       run: tflint -f compact --recursive --minimum-failure-severity=error
 
      - name: Terraform plan [pull_request]
        id: plan-pr
@@ -213,6 +221,7 @@ jobs:
              echo "unsupported environment";
             fi
             terraform apply -var-file=variables/$ENV.auto.tfvars -auto-approve -lock=false
+
  otel-cicd-action:
    if: always()
    name: OpenTelemetry Export Trace
