--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,4 +12,4 @@ repos:
     - id: terraform_docs
     - id: terraform_tflint
     - id: terraform_validate
-    - id: terraform_checkov
+#    - id: terraform_checkov
