--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,6 +8,9 @@ on:
    - develop
  pull_request:
 
+permissions:
+   contents: read-all
+
 env:
  # verbosity setting for Terraform logs
  TF_LOG: INFO
@@ -212,16 +215,16 @@ jobs:
            #### Terraform Initialization ⚙️\`${{ steps.init-pr.outcome }}\`
            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
            #### Terraform Plan 📖\`${{ steps.plan-pr.outcome }}\`
- 
+
            <details><summary>Show Plan</summary>
- 
+
            \`\`\`\n
            ${process.env.PLAN}
            \`\`\`
- 
+
            </details>
            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
- 
+
            github.rest.issues.createComment({
              issue_number: context.issue.number,
              owner: context.repo.owner,
